Port to MC 1.16.5 (2.21.8): Java8+NBT+oldGUI, full tests green (19+fuzz5000)